# SeaShepherdRules

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ANSI.md  TO-DO.md  program_structure.md  splosna-navodila-za-izdelavo-igrice.docx
include/: Atol.hpp  CollisionManager.hpp  Constants.hpp  Enemy.hpp  Entity.hpp  Game.hpp  GameState.hpp  Healthbar.hpp  Hint.hpp  Iceberg.hpp  InputManager.hpp  Leaderboard.hpp  Level.hpp  LevelManager.hpp  Logger.hpp  Pirate.hpp  Player.hpp  PlayerInfo.hpp  Renderer.hpp  Replay.hpp  ResourceManager.hpp  Screen.hpp  Utilities.hpp  Vektor.hpp  Whaler.hpp  WindowManager.hpp
src/: Atol.cpp  Enemy.cpp  Game.cpp  Healthbar.cpp  Hint.cpp  Iceberg.cpp  InputManager.cpp  Leaderboard.cpp  Level.cpp  Logger.cpp  Pirate.cpp  Player.cpp  PlayerInfo.cpp  Replay.cpp  ResourceManager.cpp  Screen.cpp  Utilities.cpp  Vektor.cpp  Whaler.cpp  WindowManager.cpp  main.cpp
